Fixed Lexer and Stream Extension

--- a/LanguageModel/LanguageModel.csproj
+++ b/LanguageModel/LanguageModel.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Lexer\Lexer.cs" />
-    <Compile Include="Lexer\MoveableStreamReader.cs" />
+    <Compile Include="Lexer\StreamExtension.cs" />
     <Compile Include="Lexer\Token.cs" />
     <Compile Include="Lexer\Trivia.cs" />
     <Compile Include="Parser\Parser.cs" />
