--- a/Formatting.Tests/packages.config
+++ b/Formatting.Tests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Composition" version="1.0.27" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Composition" version="14.0.0-pre-g84b33dc4d6" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Validation" version="14.0.50617-pre" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="xunit" version="2.0.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net452" />
