--- a/Formatting.Tests/Formatting.Tests.csproj
+++ b/Formatting.Tests/Formatting.Tests.csproj
@@ -102,6 +102,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssignmentAndBinaryOperatorTests.cs" />
     <Compile Include="LeftCommaTests.cs" />
     <Compile Include="Tester.cs" />
     <Compile Include="WrappingTests.cs" />
