--- a/Formatting.Tests/Formatting.Tests.csproj
+++ b/Formatting.Tests/Formatting.Tests.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssignmentAndBinaryOperatorTests.cs" />
+    <Compile Include="ForLoopTests.cs" />
     <Compile Include="LeftCommaTests.cs" />
     <Compile Include="Tester.cs" />
     <Compile Include="WrappingTests.cs" />
