--- a/LanguageModel/packages.config
+++ b/LanguageModel/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ImmutableObjectGraph.Core" version="0.1.0-beta4" targetFramework="net452" />
-  <package id="ImmutableObjectGraph.T4" version="0.1.0-beta4" targetFramework="net452" />
-  <package id="Microsoft.Bcl.Immutable" version="1.0.27" targetFramework="net452" />
+  <package id="ImmutableObjectGraph" version="1.0.15185-beta6" targetFramework="net452" />
+  <package id="ImmutableObjectGraph.Generation" version="1.0.15185-beta6" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
+  <package id="Validation" version="2.0.5.14286" targetFramework="net452" />
 </packages>
