Add mixed format testing

--- a/Formatting.Tests/Formatting.Tests.csproj
+++ b/Formatting.Tests/Formatting.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="BracketTests.cs" />
     <Compile Include="ForLoopTests.cs" />
     <Compile Include="LeftCommaTests.cs" />
+    <Compile Include="MixedTests.cs" />
     <Compile Include="NewlineRuleTesting.cs" />
     <Compile Include="Tester.cs" />
     <Compile Include="WrappingTests.cs" />
