Add if Rule applies to some FormattingContext

--- a/LanguageModel/LanguageModel.csproj
+++ b/LanguageModel/LanguageModel.csproj
@@ -52,10 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Formatting\Formatter.cs" />
+    <Compile Include="Formatting\ParsedToken.cs" />
     <Compile Include="Formatting\Ruling\FormattingContext.cs" />
     <Compile Include="Formatting\Ruling\Rule.cs" />
     <Compile Include="Formatting\Ruling\RuleAction.cs" />
+    <Compile Include="Formatting\Ruling\RuleBucket.cs" />
     <Compile Include="Formatting\Ruling\RuleDescriptor.cs" />
+    <Compile Include="Formatting\Ruling\RuleMap.cs" />
     <Compile Include="Formatting\Ruling\RuleOperation.cs" />
     <Compile Include="Formatting\Ruling\RuleOperationContext.cs" />
     <Compile Include="Formatting\TextEditInfo.cs" />
