--- a/LanguageModel/LanguageModel.csproj
+++ b/LanguageModel/LanguageModel.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Formatting\Formatter.cs" />
     <Compile Include="Formatting\ParsedToken.cs" />
-    <Compile Include="Formatting\Ruling\FormattingContext.cs" />
+    <Compile Include="Formatting\FormattingContext.cs" />
     <Compile Include="Formatting\Ruling\Rule.cs" />
     <Compile Include="Formatting\Ruling\RuleAction.cs" />
     <Compile Include="Formatting\Ruling\RuleBucket.cs" />
