--- a/LanguageModel/LanguageModel.csproj
+++ b/LanguageModel/LanguageModel.csproj
@@ -67,7 +67,9 @@
     <Compile Include="Formatting\Ruling\RuleMap.cs" />
     <Compile Include="Formatting\Ruling\RuleOperation.cs" />
     <Compile Include="Formatting\Ruling\RuleOperationContext.cs" />
+    <Compile Include="Formatting\Ruling\Rules.cs" />
     <Compile Include="Formatting\TextEditInfo.cs" />
+    <Compile Include="Formatting\TokenRange.cs" />
     <Compile Include="Lexer\Lexer.cs" />
     <Compile Include="Lexer\StreamExtension.cs" />
     <Compile Include="Lexer\Token.cs" />
