--- a/LanguageModel/LanguageModel.csproj
+++ b/LanguageModel/LanguageModel.csproj
@@ -70,11 +70,12 @@
     <Compile Include="Formatting\Ruling\Rules.cs" />
     <Compile Include="Formatting\TextEditInfo.cs" />
     <Compile Include="Formatting\TokenRange.cs" />
-    <Compile Include="Lexer\Lexer.cs" />
-    <Compile Include="Lexer\StreamExtension.cs" />
-    <Compile Include="Lexer\Token.cs" />
-    <Compile Include="Lexer\Trivia.cs" />
-    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Lexer.cs" />
+    <Compile Include="StreamExtension.cs" />
+    <Compile Include="Token.cs" />
+    <Compile Include="TrackableStreamReader.cs" />
+    <Compile Include="Trivia.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyntaxNode.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
@@ -87,6 +88,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\ImmutableObjectGraph.Generation.1.0.15185-beta6\build\ImmutableObjectGraph.Generation.targets" Condition="Exists('packages\ImmutableObjectGraph.Generation.1.0.15185-beta6\build\ImmutableObjectGraph.Generation.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
