--- a/LanguageModel/packages.config
+++ b/LanguageModel/packages.config
@@ -4,4 +4,9 @@
   <package id="ImmutableObjectGraph.Generation" version="1.0.15185-beta6" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="Validation" version="2.0.5.14286" targetFramework="net452" />
+  <package id="xunit" version="2.1.0-beta3-build3029" targetFramework="net452" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
+  <package id="xunit.assert" version="2.1.0-beta3-build3029" targetFramework="net452" />
+  <package id="xunit.core" version="2.1.0-beta3-build3029" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta3-build3029" targetFramework="net452" />
 </packages>
