--- a/Formatting.Tests/Formatting.Tests.csproj
+++ b/Formatting.Tests/Formatting.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AssignmentAndBinaryOperatorTests.cs" />
     <Compile Include="BracketTests.cs" />
     <Compile Include="ForLoopTests.cs" />
+    <Compile Include="IndentationTests.cs" />
     <Compile Include="LeftCommaTests.cs" />
     <Compile Include="MixedTests.cs" />
     <Compile Include="NewlineRuleTesting.cs" />
