Clean up general test methods

--- a/Formatting.Tests/Formatting.Tests.csproj
+++ b/Formatting.Tests/Formatting.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="MixedTests.cs" />
     <Compile Include="NewlineRuleTesting.cs" />
     <Compile Include="Tester.cs" />
+    <Compile Include="TrailingWhitespaceTests.cs" />
     <Compile Include="WrappingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
