Add global way to get parse tree

--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -106,6 +106,7 @@
     <Compile Include="LanguageModel\NodeClasses.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
+    <Compile Include="SourceText.cs" />
     <Compile Include="TextProvider.cs" />
   </ItemGroup>
   <ItemGroup>
