--- a/LanguageModel/LuaVSHost/VSLua.csproj
+++ b/LanguageModel/LuaVSHost/VSLua.csproj
@@ -60,7 +60,7 @@
     <Compile Include="LuaPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\Constants.cs" />
-    <Compile Include="Shared\Service.cs" />
+    <Compile Include="Shared\SourceTextProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
