--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -46,6 +46,7 @@
       <HintPath>packages\ImmutableObjectGraph.1.0.15192-beta7\lib\portable-net45+win+wp80\ImmutableObjectGraph.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.1.36.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Collections.Immutable.1.1.36\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -53,13 +54,10 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Validation, Version=2.0.0.0, Culture=neutral, PublicKeyToken=2fc06f0d701809a7, processorArchitecture=MSIL">
-      <HintPath>packages\Validation.2.0.5.14286\lib\portable-windows8+net40+sl5+wp8+wpa81+wp81+MonoAndroid+MonoTouch\Validation.dll</HintPath>
+      <HintPath>packages\Validation.2.0.6.15003\lib\portable-net40+sl50+win+wpa81+wp80+Xamarin.iOS10+MonoAndroid10+MonoTouch10\Validation.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
@@ -77,12 +75,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Formatting\Formatter.cs" />
+    <Compile Include="Formatting\FormattingContext.cs" />
     <Compile Include="Formatting\Indenter.cs" />
     <Compile Include="Formatting\ParsedToken.cs" />
-    <Compile Include="Formatting\FormattingContext.cs" />
     <Compile Include="Formatting\Ruling\DeleteSpaceBeforeEofToken.cs" />
+    <Compile Include="Formatting\Ruling\DeleteTrailingWhitespace.cs" />
     <Compile Include="Formatting\Ruling\Rule.cs" />
-    <Compile Include="Formatting\Ruling\SimpleRule.cs" />
     <Compile Include="Formatting\Ruling\RuleAction.cs" />
     <Compile Include="Formatting\Ruling\RuleBucket.cs" />
     <Compile Include="Formatting\Ruling\RuleDescriptor.cs" />
@@ -90,24 +88,24 @@
     <Compile Include="Formatting\Ruling\RuleOperation.cs" />
     <Compile Include="Formatting\Ruling\RuleOperationContext.cs" />
     <Compile Include="Formatting\Ruling\Rules.cs" />
-    <Compile Include="Formatting\Ruling\DeleteTrailingWhitespace.cs" />
+    <Compile Include="Formatting\Ruling\SimpleRule.cs" />
     <Compile Include="Formatting\TextEditInfo.cs" />
     <Compile Include="Formatting\TokenRange.cs" />
     <Compile Include="LanguageModel\IndentingTextWriter.cs" />
     <Compile Include="LanguageModel\Lexer.cs" />
+    <Compile Include="LanguageModel\NodeClasses.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="LanguageModel\ParseError.cs" />
+    <Compile Include="LanguageModel\Parser.cs" />
     <Compile Include="LanguageModel\StreamExtension.cs" />
     <Compile Include="LanguageModel\SyntaxTree.cs" />
     <Compile Include="LanguageModel\Token.cs" />
     <Compile Include="LanguageModel\TrackableTextReader.cs" />
     <Compile Include="LanguageModel\Trivia.cs" />
-    <Compile Include="LanguageModel\Parser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LanguageModel\NodeClasses.cs">
-      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
-    </Compile>
-    <Compile Include="SourceText.cs" />
     <Compile Include="ParseTreeProvider.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceText.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
@@ -127,11 +125,4 @@
     <Error Condition="!Exists('packages\ImmutableObjectGraph.Generation.1.0.15192-beta7\build\ImmutableObjectGraph.Generation.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ImmutableObjectGraph.Generation.1.0.15192-beta7\build\ImmutableObjectGraph.Generation.targets'))" />
   </Target>
   <Import Project="packages\ImmutableObjectGraph.Generation.1.0.15192-beta7\build\ImmutableObjectGraph.Generation.targets" Condition="Exists('packages\ImmutableObjectGraph.Generation.1.0.15192-beta7\build\ImmutableObjectGraph.Generation.targets')" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
