--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -74,12 +74,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
-    <Content Include="VSLua.pkgdef">
+    <Content Include="LuaLanguageServicePackage.pkgdef">
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Lua.Host.ico" />
-    <Content Include="stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
